err/xsltools.err
Listing '.'...
Listing './bin'...
Compiling './bin/xslform_extract.py'...
***   File "./bin/xslform_extract.py", line 14
    print "Please specify a template, an output filename and a template node identifier."
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_fix.py'...
***   File "./bin/xslform_fix.py", line 13
    print "Please specify template input and result filenames."
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_input.py'...
***   File "./bin/xslform_input.py", line 13
    print "Please specify a template and an output filename."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_output.py'...
***   File "./bin/xslform_output.py", line 25
    print "Please specify an input filename, a template filename and an output filename."
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_prepare.py'...
***   File "./bin/xslform_prepare.py", line 13
    print "Please specify a template and an output filename."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_preparemacro.py'...
***   File "./bin/xslform_preparemacro.py", line 13
    print "Please specify a template and an output filename."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_qt_prepare.py'...
***   File "./bin/xslform_qt_prepare.py", line 13
    print "Please specify a template and an output filename."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_qt_template.py'...
***   File "./bin/xslform_qt_template.py", line 13
    print "Please specify a template and an output filename."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/xslform_schema.py'...
***   File "./bin/xslform_schema.py", line 13
    print "Please specify a template and an schema filename."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/XSLForms'...
Compiling './lib/python3.5/site-packages/XSLForms/Fields.py'...
***   File "./lib/python3.5/site-packages/XSLForms/Fields.py", line 138
    except FieldsError, exc:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/XSLForms/Resources'...
Compiling './lib/python3.5/site-packages/XSLForms/Resources/PyQtCommon.py'...
***   File "./lib/python3.5/site-packages/XSLForms/Resources/PyQtCommon.py", line 40
    raise NotImplementedError, "get_document"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/XSLForms/Resources/PyQtWebResources.py'...
***   File "./lib/python3.5/site-packages/XSLForms/Resources/PyQtWebResources.py", line 129
    raise NotImplementedError, "form_init"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/XSLForms/Resources/WebResources.py'...
***   File "./lib/python3.5/site-packages/XSLForms/Resources/WebResources.py", line 167
    raise ValueError, stylesheet_filenames
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/XSLForms/XSL'...
Listing './lib/python3.5/site-packages/XSLTools'...
Compiling './lib/python3.5/site-packages/XSLTools/XMLCalendar.py'...
***   File "./lib/python3.5/site-packages/XSLTools/XMLCalendar.py", line 105
    print get_calendar_for_month(int(sys.argv[1]), int(sys.argv[2])).toString()
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/XSLTools/XSLOutput.py'...
***   File "./lib/python3.5/site-packages/XSLTools/XSLOutput.py", line 95
    raise OutputError, "Transformation failed."
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/XSLTools-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
